# patterns

./: CMakeLists.txt  README.txt  game_log.txt  main.cpp
ai/include/: ai.h
ai/src/: ai.cpp
code/: choosing.cpp  data_unit.h  field.cpp
data/: cond.txt  data  data_unit  data_unit.h  settings.txt
data/dialogs/: beginning  start_menu
data_work/: data  data.h  database.cpp  database.h  rewrite.cpp  rewrite_data.cpp
game/include/: field.h  game_drawer.h  game_fight.h  position.h  sprite_storage.h  unit.h
game/src/: field.cpp  game_drawer.cpp  game_fight.cpp  position.cpp  sprite_storage.cpp  unit.cpp
graphic/include/: graphic.h  graphic_interface.h  gui.h  gui_interface.h  gui_objects_concrete.h  gui_objects_factory.h
graphic/src/: graphic.cpp  gui.cpp  gui_objects.cpp  gui_objects_factory.cpp  text.cpp
include/: beginning.h  data.h  database.h  database_loader.h  graphic.h  graphic_interface.h  gui.h  gui_interface.h  gui_objects.h  gui_objects_concrete.h  gui_objects_factory.h  interactive_fiction.h  log.h  rewrite.h  settings.h  start_menu.h  state_manager.h  text.h  window_interface.h
last_attempt/: CMakeLists.txt  notes.txt
last_attempt/code/: AI.h  choosing.h  data_class_gamer.cpp  data_class_gamer.h  field.h  main.cpp
last_attempt/data/: rewrite_unit.cpp
last_attempt/include/: gui_interface.h  gui_objects.h
last_attempt/src/: game_interface.cpp  gui.cpp  gui_objects.cpp
src/: ai.cpp  beginning.cpp  chooser.cpp  choosing.cpp  data.cpp  database.cpp  database_loader.cpp  graphic.cpp  gui.cpp  gui_objects.cpp  gui_objects_factory.cpp  interactive_fiction.cpp  log.cpp  main.cpp  rewrite.cpp  settings.cpp  start_menu.cpp  state_manager.cpp  text.cpp
